--- a/Project1.ipynb
+++ b/Project1.ipynb
@@ -41,7 +41,7 @@
     "    \n",
     "    db = mysql.connector.connect(\n",
     "        user='root',\n",
-    "        password= '264538',\n",
+    "        password= 'your_password',\n",
     "        host='localhost',\n",
     "        database= 'cafe_management'\n",
     "    )\n",
@@ -294,7 +294,7 @@
     "                    con = mysql.connector.connect(\n",
     "                        host='localhost', \n",
     "                        username='root', \n",
-    "                        password='264538', \n",
+    "                        password='your_password', \n",
     "                        database='cafe_management')\n",
     "                    mycur = con.cursor()\n",
     "                except:\n",
@@ -360,7 +360,7 @@
     "            con = mysql.connector.connect( \n",
     "                host='localhost', \n",
     "                username='root', \n",
-    "                password='264538', \n",
+    "                password='your_password', \n",
     "                database='cafe_management')\n",
     "            mycur = con.cursor()\n",
     "\n",
@@ -406,7 +406,7 @@
     "def signuppage():\n",
     "    connection = mysql.connector.connect(\n",
     "        user='root',\n",
-    "        password= '264538',\n",
+    "        password= 'your_password',\n",
     "        host='localhost',\n",
     "        database= 'cafe_management'\n",
     "    )\n",
